@@ -186,6 +186,7 @@
 <p>Dataset extensions can be loaded into a single Sequel::Database object via Sequel::Dataset#extension, or to all datasets for a given database via Sequel::Database#extension, or all datasets for all databases by using Sequel::Database.extension.</p>
 
 <ul>
+<li><a href="rdoc-plugins/files/lib/sequel/extensions/any_not_empty.html">any_not_empty</a>: Make Dataset#any? without block mean !empty?.</li>
 <li><a href="rdoc-plugins/files/lib/sequel/extensions/auto_literal_strings_rb.html">auto_literal_strings</a>: Automatically treats string arguments passed to filter methods as literal SQL.</li>
 <li><a href="rdoc-plugins/files/lib/sequel/extensions/columns_introspection_rb.html">columns_introspection</a>: Attemps to skip database queries by introspecting the selected columns if possible.</li>
 <li><a href="rdoc-plugins/files/lib/sequel/extensions/current_datetime_timestamp_rb.html">current_datetime_timestamp</a>: Creates current Time/DateTime objects that are literalized as CURRENT_TIMESTAMP.</li>
